Fix spacing

--- a/ui/src/css/extensions/common-custom.css
+++ b/ui/src/css/extensions/common-custom.css
@@ -507,7 +507,7 @@ footer.footer {
 }
 
 .doc details > summary::after {
-  left: 0rem;
+  left: 0;
   background-image: url(../img/chevron-down-gray.svg);
 }
 
